multicluster/helloworld/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
    - helloworld
    - istio-ingressgateway.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        host: helloworld
        subset: v1
      weight: 0
    - destination:
        host: helloworld
        subset: v2
      weight: 100
